    default of 100 seems to cause issues with Thunar.
20. Extend background gradients into window decoration.
21. Fix faded menuitems when using menu background gradients.
22. If background gradient has a 'shine', then when used for backgrounds draw a
    radial gradient top centered.
23. Use arrows on pathbar buttons.

1.5.2
-----
1. Apply opacity settings to inactive tabs.
2. Add config option of apps that should not use menu opacity.
3. Add inkscape to list of apps to exclude opacity settings from.
4. Exclude opacity settings from browser plugins - nspluginviewer,
   plugin-container, and chrome (instance used to load plugins).
5. Exclude opacity settings for openoffice.org - crashes otherwise!
6. Check widget's colormap before drawing transparent.
7. Support non-integer font sizes - patch from Alyssa Hung

1.5.1
-----
1. Fix drawing of square frames, when general setting set to round.
2. Dont draw thumbs on circular sliders - they dont look good!
3. Add options to set opacity for window and poup-menu backgrounds. The KDE SC4.5
   blur-behind hint is set when the opacity!=100
4. If hiding via kwin buttons, emit menubar & statusbar details when a window is
   mapped.

1.5.0
-----
1. Add option to set progressbar colour.
2. Add options to have squared sliders and/or scrollbar sliders even when
   general setting set to round.
3. Add option to use menubar colours for popup menus.
4. Add option to set alpha values used to draw etch/shadow effect.
5. Dont draw double shadow for coloured combo buttons.

1.4.1
-----
1. When drawing button-like checks and radios, do not drawn sunken if they are in
   a list/tree view.
2. Fix segfault on some systems due to gdk_x11_get_default_xdisplay usage.

1.4.0
-----
 1. Add striped window and menu background options.
 2. Added options to not square frames and tab frames.
 3. Animate faded progressbars when animation enabled.
 4. Blend menubar and window titlebar gradients if: